[gd_scene load_steps=4 format=3 uid="uid://jsdxr85120fu"]

[ext_resource type="Script" path="res://UTILITIES/TOOLS/highscore/HighScoreScene.gd" id="1_k4j1f"]

[sub_resource type="Animation" id="Animation_4vmel"]
resource_name = "loading"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RefreshTimer/Polygon2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4),
"transitions": PackedFloat32Array(1.6245, 0.189465),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_obqj4"]
_data = {
"loading": SubResource("Animation_4vmel")
}

[node name="Highscore" type="Node2D"]
script = ExtResource("1_k4j1f")

[node name="RichTextLabelLeaderboard" type="RichTextLabel" parent="."]
offset_left = 20.0
offset_top = 25.0
offset_right = 727.0
offset_bottom = 577.0
text = "1
2
3
4
5
6
7
8
9
10"

[node name="LabelScore" type="Label" parent="."]
offset_left = 686.0
offset_top = 86.0
offset_right = 780.0
offset_bottom = 123.0
text = "score"

[node name="LabelHighscore" type="Label" parent="."]
offset_left = 1021.0
offset_top = 104.0
offset_right = 1115.0
offset_bottom = 141.0
text = "0"

[node name="InputName" type="LineEdit" parent="."]
offset_left = 632.0
offset_top = 358.0
offset_right = 950.0
offset_bottom = 419.0
text = "name"

[node name="Label5" type="Label" parent="."]
offset_left = 686.0
offset_top = 44.0
offset_right = 780.0
offset_bottom = 81.0
text = "score"

[node name="Label3" type="Label" parent="."]
offset_left = 1021.0
offset_top = 71.0
offset_right = 1115.0
offset_bottom = 108.0
text = "high score"

[node name="Label2" type="Label" parent="."]
offset_left = 626.0
offset_top = 316.0
offset_right = 975.0
offset_bottom = 353.0
text = "input name:"

[node name="ButtonUpload" type="Button" parent="."]
offset_left = 664.0
offset_top = 122.0
offset_right = 748.0
offset_bottom = 163.0
text = "upload"

[node name="ButtonChangeName" type="Button" parent="."]
offset_left = 967.0
offset_top = 370.0
offset_right = 1051.0
offset_bottom = 411.0
text = "ok
"

[node name="ButtonRefresh" type="Button" parent="."]
offset_left = 265.0
offset_top = 24.0
offset_right = 349.0
offset_bottom = 65.0
text = "refresh"

[node name="ButtonAdd" type="Button" parent="."]
offset_left = 800.0
offset_top = 68.0
offset_right = 884.0
offset_bottom = 109.0
text = "+"

[node name="ButtonSubtract" type="Button" parent="."]
offset_left = 533.0
offset_top = 72.0
offset_right = 617.0
offset_bottom = 113.0
text = "-"

[node name="RefreshTimer" type="Timer" parent="."]
wait_time = 1.23
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="RefreshTimer"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_obqj4")
}

[node name="Polygon2D" type="Polygon2D" parent="RefreshTimer"]
position = Vector2(238, 504)
rotation = 6.28319
color = Color(0.607843, 0, 0.607843, 1)
polygon = PackedVector2Array(1, 0, -115, 71, 115, 72)

[node name="Label" type="Label" parent="RefreshTimer/Polygon2D"]
offset_left = -26.0
offset_top = 35.0
offset_right = 32.0
offset_bottom = 58.0
text = "loading"

[connection signal="pressed" from="ButtonUpload" to="." method="_on_button_upload_pressed"]
[connection signal="pressed" from="ButtonChangeName" to="." method="_on_button_change_name_pressed"]
[connection signal="pressed" from="ButtonRefresh" to="." method="_on_button_refresh_pressed"]
[connection signal="pressed" from="ButtonAdd" to="." method="_on_button_add_pressed"]
[connection signal="pressed" from="ButtonSubtract" to="." method="_on_button_subtract_pressed"]
[connection signal="timeout" from="RefreshTimer" to="." method="_on_refresh_timer_timeout"]
